--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <!-- this is the password protection thingie -- remove later!-->
-  <SCRIPT language="JavaScript">
+<!--
+<SCRIPT language="JavaScript">
     var password; 
     var pass1="slayallday"; 
     password=prompt('Portfolio is currently under construction - check back after 10/25. Admin users, Enter Password',' '); 
@@ -11,7 +12,7 @@
     alert('Correct Password! Click OK to Enter!'); 
     else { window.location="http://google.com/"; 
     } 
-    </SCRIPT>
+    </SCRIPT> -->
 <!--end of password protection ^ delete when done-->
 
   <meta charset="utf-8">
