--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- this is the password protection thingie -- remove later!-->
-<!--
+
 <SCRIPT language="JavaScript">
     var password; 
     var pass1="slayallday"; 
@@ -12,7 +12,7 @@
     alert('Correct Password! Click OK to Enter!'); 
     else { window.location="http://google.com/"; 
     } 
-    </SCRIPT> -->
+    </SCRIPT> 
 <!--end of password protection ^ delete when done-->
 
   <meta charset="utf-8">
