--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>By taking multiple college-level computer science and math courses combined with the STEM knowledge I've gained in my extracirricular activities, I have a strong understanding of many different softwares, topics, and languages:</p>
+          <p>By taking multiple college-level computer science and math courses combined with the STEM knowledge I've gained in my extracurricular activities, I have a strong understanding of many different softwares, topics, and languages:</p>
         </div>
 
         <div class="row skills-content">
@@ -259,16 +259,15 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">School</li>
+              <li data-filter=".filter-card">Extracurricular</li>
+              <li data-filter=".filter-web">Personal</li>
             </ul>
           </div>
         </div>
@@ -279,11 +278,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Bubble Brand Ambassador</h4>
+                <p>Extracurricular</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Enlarge Images"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-bubble.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -293,11 +292,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Robotics</h4>
+                <p>Extracurricular</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Enlarge Images"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-details-robotics.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
