--- a/portfolio-details-robotics.html
+++ b/portfolio-details-robotics.html
@@ -50,15 +50,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/robotics/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/robotics/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/robotics/3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/robotics/4.png" alt="">
                 </div>
 
               </div>
@@ -70,10 +74,10 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Title</strong>: President</li>
+                <li><strong>Company</strong>: FIRST Team Paradox 2102</li>
+                <li><strong>Project date</strong>: September 12th, 2018</li>
+                <li><strong>Project URL</strong>: <a href="https://team2102.org/" target="_blank" rel="noopener nonreferrer">www.team2102.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
