--- a/portfolio-details-bubble.html
+++ b/portfolio-details-bubble.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+
+  <!-- Google Analytics End-->
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -70,7 +83,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Brand Ambassador</li>
+                <li><strong>Title</strong>: Brand Ambassador</li>
                 <li><strong>Company</strong>: Bubble Skincare</li>
                 <li><strong>Project date</strong>: December 18th, 2020</li>
                 <li><strong>Project URL</strong>: <a href="https://www.hellobubble.com" target="_blank" rel="noopener nonreferrer">www.hellobubble.com</a></li>
