--- a/portfolio-details-robotics.html
+++ b/portfolio-details-robotics.html
@@ -35,6 +35,17 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+  <!-- Google Analytics End-->
+
 <body>
 
   <main id="main">
