--- a/portfolio-details-armis.html
+++ b/portfolio-details-armis.html
@@ -2,19 +2,6 @@
 <html lang="en">
 
 <head>
-
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DQG1VE1M5D');
-</script>
-
-  <!-- Google Analytics End-->
-
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -48,6 +35,17 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+  <!-- Google Analytics End-->
+
 <body>
 
   <main id="main">
@@ -63,15 +61,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/2.png" alt="">
+                  <img src="assets/img/portfolio/armis/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/3.png" alt="">
+                  <img src="assets/img/portfolio/armis/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/4.png" alt="">
+                  <img src="assets/img/portfolio/armis/3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/armis/4.png" alt="">
                 </div>
 
               </div>
@@ -83,17 +85,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Title</strong>: Brand Ambassador</li>
-                <li><strong>Company</strong>: Bubble Beauty Inc.</li>
-                <li><strong>Project date</strong>: December 18th, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.hellobubble.com" target="_blank" rel="noopener nonreferrer">www.hellobubble.com</a></li>
+                <li><strong>Certificate Title</strong>: Cyber Defense Core Badge</li>
+                <li><strong>Company</strong>: Armis</li>
+                <li><strong>Project date</strong>: November 4th, 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://www.armis.com/armis-university/" target="_blank" rel="noopener nonreferrer">www.armis.com/armis-university/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2></h2>
-              <p>
-                Throughout my time at Bubble Beaty Inc., I have held many roles and contributed to many projects. Over the last couple years, I have helped Bubble with its intial online launch, and subsequent in-store launches in Walmart and Ulta. I also Assist with consumer insight, product testing, and social media presence. I have assisted in the development of a few of Bubble's upcoming projects and I have created content for them on both Instagram and Tik Tok. 
-              </p>
+             <ul>
+              <li>Worked with an ARMIS Internet of Things Professional to learn about their product</li>
+              <li>Got trained in the ARMIS ecosystem and how to navigate the ARMIS hub</li>
+              <li>Now, I am certified to use ARMIS to identify compromised IOT assets and identify hackers moving laterally through networks</li>
+             </ul>
             </div>
           </div>
 
