--- a/portfolio-details-calorie-tracker.html
+++ b/portfolio-details-calorie-tracker.html
@@ -2,19 +2,6 @@
 <html lang="en">
 
 <head>
-
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DQG1VE1M5D');
-</script>
-
-  <!-- Google Analytics End-->
-
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -48,6 +35,17 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+  <!-- Google Analytics End-->
+
 <body>
 
   <main id="main">
@@ -63,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/2.png" alt="">
+                  <img src="assets/img/portfolio/cc/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/3.png" alt="">
+                  <img src="assets/img/portfolio/cc/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/4.png" alt="">
+                  <img src="assets/img/portfolio/cc/3.png" alt="">
                 </div>
 
               </div>
@@ -83,16 +81,15 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Title</strong>: Brand Ambassador</li>
-                <li><strong>Company</strong>: Bubble Beauty Inc.</li>
-                <li><strong>Project date</strong>: December 18th, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.hellobubble.com" target="_blank" rel="noopener nonreferrer">www.hellobubble.com</a></li>
+                <li><strong>Title</strong>: Calorie Tracker Application</li>
+                <li><strong>Class</strong>: AP Computer Science</li>
+                <li><strong>Project date</strong>: May 20, 2020</li>
+                <li><strong>Project URL</strong>: <a href="https://drive.google.com/file/d/1j_CwxRlvBGebXB_TiKFI6nvdi70PyDDY/view?usp=sharing" target="_blank" rel="noopener nonreferrer">link to APK file</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2></h2>
               <p>
-                Throughout my time at Bubble Beaty Inc., I have held many roles and contributed to many projects. Over the last couple years, I have helped Bubble with its intial online launch, and subsequent in-store launches in Walmart and Ulta. I also Assist with consumer insight, product testing, and social media presence. I have assisted in the development of a few of Bubble's upcoming projects and I have created content for them on both Instagram and Tik Tok. 
+                In my junior year of high school (2019), I took AP Computer Science. In this class, our final project was to create an application of choice. As a fitness oriented individual, I created a calorie trackin app with various databases used to track individual daily caloric intake databases which could look at the caloric intake from a broader view, showing all of the tracked days. The program also had the ability to save commonly eated foods in databases so you didn't have to type in a food you had more than once. After taking the AP Test, I recieved college credit for GE Computer Science Coursework.  
               </p>
             </div>
           </div>
