--- a/portfolio-details-pals.html
+++ b/portfolio-details-pals.html
@@ -2,19 +2,6 @@
 <html lang="en">
 
 <head>
-
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DQG1VE1M5D');
-</script>
-
-  <!-- Google Analytics End-->
-
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -48,6 +35,17 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+  <!-- Google Analytics End-->
+
 <body>
 
   <main id="main">
@@ -63,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/2.png" alt="">
+                  <img src="assets/img/portfolio/PALs/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/3.png" alt="">
+                  <img src="assets/img/portfolio/PALs/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/4.png" alt="">
+                  <img src="assets/img/portfolio/PALs/3.png" alt="">
                 </div>
 
               </div>
@@ -83,17 +81,21 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Title</strong>: Brand Ambassador</li>
-                <li><strong>Company</strong>: Bubble Beauty Inc.</li>
-                <li><strong>Project date</strong>: December 18th, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.hellobubble.com" target="_blank" rel="noopener nonreferrer">www.hellobubble.com</a></li>
+                <li><strong>Title</strong>: Peer Assistant Listener</li>
+                <li><strong>Company</strong>: San Dieguito HS Academy</li>
+                <li><strong>Project date</strong>: 2020 - 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://sites.google.com/sduhsd.net/sdapals/home" target="_blank" rel="noopener nonreferrer">PALs Website</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2></h2>
-              <p>
-                Throughout my time at Bubble Beaty Inc., I have held many roles and contributed to many projects. Over the last couple years, I have helped Bubble with its intial online launch, and subsequent in-store launches in Walmart and Ulta. I also Assist with consumer insight, product testing, and social media presence. I have assisted in the development of a few of Bubble's upcoming projects and I have created content for them on both Instagram and Tik Tok. 
-              </p>
+              <ul>
+                <li>Selected out of 200 applicants, I was one of fourteen Peer Assistant Listeners (PALs)</li>
+                <li>PALs are essentially peer-therapists. We have our own office, are able to call students out of class, and are trusted to have confidential conversations about anything with peers</li>
+                <li>Throughout the year, my team and I would put together mental-health-focused presentations and present them to almost all students at school (2,200 students)</li>
+              </ul>
+              <!-- <p>
+                During high school, I was a member of the schools robotics team. During my first year on the team, I focused on programming the robots using Java. My second year on the team, I elected to be the Head of Sponsor Relations and I worked on recruiting sponsors like Viasat, Qualcomm, and more, all totalling in donations over $75,000. The following year, I was elected to be the president of the team and worked on various other projects while managin the Engineering, Business, and Marketing branches of the team. During my junior year, I even became a Dean's List Semi-Finalist, which is an incredible honor for a robotics student to recieve.  
+              </p> -->
             </div>
           </div>
 
