--- a/portfolio-details-portfolio.html
+++ b/portfolio-details-portfolio.html
@@ -2,19 +2,6 @@
 <html lang="en">
 
 <head>
-
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DQG1VE1M5D');
-</script>
-
-  <!-- Google Analytics End-->
-
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -48,6 +35,17 @@
   ======================================================== -->
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQG1VE1M5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQG1VE1M5D');
+</script>
+  <!-- Google Analytics End-->
+
 <body>
 
   <main id="main">
@@ -63,15 +61,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/2.png" alt="">
+                  <img src="assets/img/portfolio/portfolio/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/3.png" alt="">
+                  <img src="assets/img/portfolio/portfolio/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/bubble/4.png" alt="">
+                  <img src="assets/img/portfolio/portfolio/3.png" alt="">
                 </div>
 
               </div>
@@ -83,16 +81,13 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Title</strong>: Brand Ambassador</li>
-                <li><strong>Company</strong>: Bubble Beauty Inc.</li>
-                <li><strong>Project date</strong>: December 18th, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://www.hellobubble.com" target="_blank" rel="noopener nonreferrer">www.hellobubble.com</a></li>
+                <li><strong>Project date</strong>: September 12th, 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://www.nitinchatlani.com" target="_blank" rel="noopener nonreferrer">www.nitinchatlani.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2></h2>
               <p>
-                Throughout my time at Bubble Beaty Inc., I have held many roles and contributed to many projects. Over the last couple years, I have helped Bubble with its intial online launch, and subsequent in-store launches in Walmart and Ulta. I also Assist with consumer insight, product testing, and social media presence. I have assisted in the development of a few of Bubble's upcoming projects and I have created content for them on both Instagram and Tik Tok. 
+                by utilizing my skills in HTML and my light knowledge of CSS, I put together this web-portfolio in order to showcase my resume and projects that I have worked on. 
               </p>
             </div>
           </div>
