--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Nitin Chatlani</h1>
-      <p>I'm a <span class="typed" data-typed-items="Computer Science Student, Musician, Cycling Enthusiast, Skincare Oficionado"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Computer Science Student, Musician, Cycling Enthusiast, Skincare Aficionado, Entepreneur"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/nitinchatlani/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.instagram.com/n.chatlani" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -103,7 +103,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.nitinchatlani.com</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.nitinchatlani.com</span></li> -->
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>+760 402 6231</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>San Diego, CA</span></li>
                 </ul>
@@ -227,12 +227,12 @@
             <div class="resume-item pb-0">
               <h4>Nitin Chatlani
               </h4>
-              <p><em>Innovative and creativity-driven Computer Sciecne Student with 3+ years of coding experience from intial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>San Diego State University</li>
+              <p><em>Innovative and creativity-driven Computer Science Student at San Diego State University with 3+ years of coding experience from intial concept to final, polished deliverable.</em></p>
+              <!-- <ul> -->
+                <!-- <li>San Diego State University</li> -->
                 <!-- <li>(760) 402-6231</li> -->
-                <li>nitin.k.chatlani@gmail.com</li>
-              </ul>
+                <!-- <li>nitin.k.chatlani@gmail.com</li> -->
+              <!-- </ul> -->
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -262,7 +262,7 @@
                 <li>AP World and US History (HIST101, 109, & 110 Equivalent)</li>
                 <li>AP Microeconomics & US Government</li>
                 <li>AP Music Theory</li>
-                <li>Spanish 1-3 (Bilterate)</li>
+                <li>Spanish 1-3 (Biliterate)</li>
 
 
               </ul>
@@ -281,10 +281,10 @@
               <h5>2020 - 2021</h5>
               <p><em>FIRST Team Paradox 2102, Encinitas, CA </em></p>
               <ul>
-                <li>Lead over 100 students with guidance from 20+ experts inSTEAM fields</li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $75,000</li>
-                <li>Facilitated the engineering (CAD, programming, etc.), marketing, and financial teams' deadlines and goals yearly</li>
+                <li>Lead over 100 students with guidance from 20+ experts in STEAM fields</li>
+                <li>Supervised the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversaw the efficient use of production project budgets ranging from $2,000 - $75,000</li>
+                <li>Facilitated the engineering (CAD, programming, etc.), marketing, and financial teams' deadlines and goals annually</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -303,10 +303,10 @@
               <h5>2019 - 2020</h5>
               <p><em>FIRST Team Paradox 2102, Encinitas, CA</em></p>
               <ul>
-                <li>Lead a </li>
-                <li>Taught students how to write compelling speeches while incorporating creative and critical thinking strategies</li>
-                <li>Taught appropriate rhetorical strategies to strengthen rhetoric and writing skills</li>
-                <li>Practiced speeches with students and gave feedback to ensure eloquent oration</li>
+                <li>Lead a group of business-oriented students focused on recruiting sponsors for the team </li>
+                <li>Worked with representatives from companies like Qualcomm, Viasat, Nordson, and more to help support the team</li>
+                <li>Invited guest speakers from sponsors to do lectures for the team to increase student knowledge of the industry</li>
+                <li>Organized sponsor appreciation events anually</li>
               </ul>
             </div>
           </div>
@@ -520,7 +520,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
