--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
             <p class="fst-italic">
             </p>
             <div class="row">
-              <div class="col-lg-6">
-                <ul>
+              <!-- <div class="col-lg-6"> -->
+                <!-- <ul> -->
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.nitinchatlani.com</span></li> -->
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>+760 402 6231</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>San Diego, CA</span></li>
-                </ul>
-              </div>
+                <!-- </ul> -->
+              <!-- </div> -->
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Year:</strong> <span>Freshman</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's of Science (in progress)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nitin.k.chatlani@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>San Diego, CA</span></li>
                 </ul>
               </div>
             </div>
