--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>English and Crtical Thining Course Teacher Aide</h4>
+              <h4>English and Critical Thinking Course Teacher Aide</h4>
               <h5>2019 - 2021</h5>
               <p><em>Univerity of California San Diego</em></p>
               <ul>
