--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <h5>2019 - 2021</h5>
               <p><em>Univerity of California San Diego</em></p>
               <ul>
-                <li>Developed class cirriculum for international students from China</li>
+                <li>Developed class curriculum for international students from China</li>
                 <li>Taught students how to write compelling speeches while incorporating creative and critical thinking strategies</li>
                 <li>Taught appropriate rhetorical strategies to strengthen rhetoric and writing skills</li>
                 <li>Practiced speeches with students and gave feedback to ensure eloquent oration</li>
@@ -305,7 +305,7 @@
               <ul>
                 <li>Lead a group of business-oriented students focused on recruiting sponsors for the team </li>
                 <li>Worked with representatives from companies like Qualcomm, Viasat, Nordson, and more to help support the team</li>
-                <li>Invited guest speakers from sponsors to do lectures for the team to increase student knowledge of the industry</li>
+                <li>Invited guest speakers from sponsor companies to present to the team on various STEAM topics</li>
                 <li>Organized sponsor appreciation events anually</li>
               </ul>
             </div>
