getting rid of city

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Year:</strong> <span>Freshman</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's of Science (in progress)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nitin.k.chatlani@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>San Diego, CA</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>San Diego, CA</span></li> -->
                 </ul>
               </div>
             </div>
