--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -455,7 +455,7 @@
     </section><!-- End Portfolio Section -->
 
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section COMMENTED OUT======= 
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
@@ -497,7 +497,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End Contact Section -->-->
 
   </main><!-- End #main -->
 
