--- a/portfolio-details-robotics.html
+++ b/portfolio-details-robotics.html
@@ -96,7 +96,7 @@
                 <li>Focused on programming the robots during the first year (using Java)</li>
                 <li>I was the Head of Sponsor Relations my second year and recruited sponsors who donated over $75,000 that year (image 4)</li>
                 <li>I also worked heavily with the marketing team and desgined the current website (image 2)</li>
-                <li>My third year, I was elected president and focused on various other projects while managing the Engineering, Business, and Marketing branches (image 3)</li>
+                <li>My third year, I was elected co-president and focused on various other projects while managing the Engineering, Business, and Marketing branches (image 3)</li>
                 <li>I was nominated for the <a href="https://www.firstinspires.org/resource-library/frc/deans-list-winners#:~:text=The%20students%20who%20earn%20FIRST,personal%20technical%20expertise%20and%20accomplishment." target="_blank" rel="noopener nonreferrer">Dean's List</a> Award and became a semi-finalist</li>
               </ul>
             </div>
