--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
               <p>Coursework and Statistics:</p>
               <ul>
                 <li>AP Computer Science P (CS100 & CS299 Equivalent)</li>
-                <li>AP Calculus AB & BS (MATH120, 140, 141, & 150 Equivalent)</li>
-                <li>AP Language and Literature Composition (RWS100 & ENGL220 Equivalent)</li>
+                <li>AP Calculus AB & BC (MATH120, 140, 141, & 150 Equivalent)</li>
                 <li>AP Physics 1 (PHYS180A & 182A Equivalent)</li>
+                <li>AP Language and Literature Composition (RWS100 & ENGL220 Equivalent)</li>
                 <li>AP World and US History (HIST101, 109, & 110 Equivalent)</li>
                 <li>AP Microeconomics & US Government</li>
                 <li>AP Music Theory</li>
@@ -305,7 +305,7 @@
               <ul>
                 <li>Lead a group of business-oriented students focused on recruiting sponsors for the team </li>
                 <li>Worked with representatives from companies like Qualcomm, Viasat, Nordson, and more to help support the team</li>
-                <li>Invited guest speakers from sponsor companies to present to the team on various STEAM topics</li>
+                <!-- <li>Invited guest speakers from sponsor companies to present to the team on various STEAM topics</li> -->
                 <li>Organized sponsor appreciation events anually</li>
               </ul>
             </div>
