classes for next semester

--- a/index.html
+++ b/index.html
@@ -243,8 +243,11 @@
               <p>Ranked the 13th best Computer Science school in California and top 100 in the US for Computer Science. Coursework and Statistics:</p>
               <ul>
                 <li>MATH150 - Calculus 1</li>
-                <li>CS101 - Java</li>
+                <li>CS150 - Java</li>
                 <li>AMIND125 - Expository Writing and Research </li>
+                <li>MATH151 - Calculus II (in progress)</li>
+                <li>CS160 - Python (in progress)</li>
+                <li>BIO100 - Introduction to Biology Laboratory (in-progress)</li>
               </ul>
 
             </div>
@@ -281,7 +284,7 @@
               <h5>2020 - 2021</h5>
               <p><em>FIRST Team Paradox 2102, Encinitas, CA </em></p>
               <ul>
-                <li>Lead over 100 students with guidance from 20+ experts in STEAM fields</li>
+                <li>Led over 100 students with guidance from 20+ experts in STEAM fields</li>
                 <li>Supervised the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
                 <li>Oversaw the efficient use of production project budgets ranging from $2,000 - $75,000</li>
                 <li>Facilitated the engineering (CAD, programming, etc.), marketing, and financial teams' deadlines and goals annually</li>
@@ -303,10 +306,10 @@
               <h5>2019 - 2020</h5>
               <p><em>FIRST Team Paradox 2102, Encinitas, CA</em></p>
               <ul>
-                <li>Lead a group of business-oriented students focused on recruiting sponsors for the team </li>
+                <li>Led a group of business-oriented students focused on recruiting sponsors for the team </li>
                 <li>Worked with representatives from companies like Qualcomm, Viasat, Nordson, and more to help support the team</li>
                 <!-- <li>Invited guest speakers from sponsor companies to present to the team on various STEAM topics</li> -->
-                <li>Organized sponsor appreciation events anually</li>
+                <li>Organized sponsor appreciation events annually</li>
               </ul>
             </div>
           </div>
