--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Nitin Chatlani</h1>
-      <p>I'm a <span class="typed" data-typed-items="Computer Science Student, Musician, Cycling Enthusiast, Skincare Aficionado, Entepreneur"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Computer Science Student, Musician, Cycling Enthusiast, Skincare Aficionado, Entrepreneur"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/nitinchatlani/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.instagram.com/n.chatlani" class="instagram"><i class="bx bxl-instagram"></i></a>
