--- a/portfolio-details-mhi.html
+++ b/portfolio-details-mhi.html
@@ -60,7 +60,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/mhi/1.jpg" alt="">
                 </div>
 
@@ -70,7 +70,7 @@
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/mhi/3.jpg" alt="">
-                </div>
+                </div> -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
