update calorie tracker tab with grammatical errors

--- a/portfolio-details-calorie-tracker.html
+++ b/portfolio-details-calorie-tracker.html
@@ -89,7 +89,7 @@
             </div>
             <div class="portfolio-description">
               <p>
-                In my junior year of high school (2019), I took AP Computer Science. In this class, our final project was to create an application of choice. As a fitness oriented individual, I created a calorie trackin app with various databases used to track individual daily caloric intake databases which could look at the caloric intake from a broader view, showing all of the tracked days. The program also had the ability to save commonly eated foods in databases so you didn't have to type in a food you had more than once. After taking the AP Test, I recieved college credit for GE Computer Science Coursework.  
+                In my junior year of high school (2019), I took AP Computer Science. In this class, our final project was to create an application of choice. As a fitness oriented individual, I created a calorie tracking app with various databases used to track individual daily caloric intake databases which could look at the caloric intake from a broader view, showing all of the tracked days. The program also had the ability to save commonly eaten foods in databases so you didn't have to type in a food you had more than once. After taking the AP Test, I recieved college credit for GE Computer Science Coursework.  
               </p>
             </div>
           </div>
