update AA Portfolio Tab

--- a/portfolio-details-anxiety-asset.html
+++ b/portfolio-details-anxiety-asset.html
@@ -86,7 +86,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Title</strong>: Intern</li>
+                <li><strong>Title</strong>: QA Lead</li>
                 <li><strong>Company</strong>: Anxiety Asset</li>
                 <li><strong>Project date</strong>: April 2020</li>
                 <li><strong>Project URL</strong>: <a href="https://www.anxietyasset.com" target="_blank" rel="noopener nonreferrer">www.anxietyasset.com</a></li>
